# sigma-pi-palindromes

./: Cargo.toml
src/: main.rs
