[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
chrono = "0.4.22"
futures = "0.3.24"
iterslide = "1.0.1"
reqwest = { version = "0.11.12" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version="1.21.1", features = ["full"]}
tower = { version = "0.4.13", features = ["limit"] }
